--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="SocialTechはEdTech業界のリーディングカンパニーを目指します。">
   <meta name="viewport" content="width=device-width, intial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel=”icon” href=“/images/favicon.ico”>
 </head>
 <body>
   <!--ヘッダー-->
